--- a/Calling/ClientApp/public/index.html
+++ b/Calling/ClientApp/public/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <title>ACS: Calling Sample app</title>
+  <title>Azure Communication Services: Calling Sample app</title>
 </head>
 
 <body>
