Changes in max-width

--- a/Calling/ClientApp/public/index.html
+++ b/Calling/ClientApp/public/index.html
@@ -11,13 +11,11 @@
   <title>Azure Communication Services: Calling Sample app</title>
 </head>
 
-<body onload="window.resizeTo(240,window.innerHeight)">
+<body style="max-width:240px">
   <div id="root" class="Root"></div>
   <script defer type="text/javascript">
     window.FabricConfig = {
       };
-      window.open(window.location.href, "_blank", "width=240px");
-      console.log('width set......')
   </script>
 </body>
 
