--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>Express X</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <h1>Express X</h1>
+  <p>Welcome to Expres X</p>
 </body>
 
 </html>
