--- a/Calling/public/index.html
+++ b/Calling/public/index.html
@@ -1,4 +1,4 @@
-﻿<!-- Copyright (c) Microsoft Corporation. -->
+<!-- Copyright (c) Microsoft Corporation. -->
 <!-- Licensed under the MIT License. -->
 
 <!doctype html>
@@ -8,27 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Azure Communication Services - UI Library: Calling Sample app" />
     <title>UI Library Calling Sample</title>
-
-    <!-- Used for debugging only -->
-    <script type="text/javascript">
-      const urlParams = new URLSearchParams(window.location.search);
-      const isEnabled = urlParams.get('rrt');
-      if (isEnabled === 'true') {
-        const script = document.createElement('script');
-        script.src = 'https://cdn.jsdelivr.net/npm/react-render-tracker';
-        document.head.appendChild(script);
-      }
-    </script>
-    <style>
-      body {
-        display: flex;
-        flex-direction: column;
-        height: auto;
-      }
-      #Root {
-        flex: 1;
-      }
-    </style>
   </head>
 
   <body>
