--- a/Calling/public/index.html
+++ b/Calling/public/index.html
@@ -1,7 +1,7 @@
-﻿<!-- Copyright (c) Microsoft Corporation. -->
+<!-- Copyright (c) Microsoft Corporation. -->
 <!-- Licensed under the MIT License. -->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <main id="root" class="Root"></main>
+    <div id="root" class="Root"></div>
     <script type="text/javascript">
       window.FabricConfig = {};
     </script>
